# oven_controller

./: .gitignore  .gitmodules  oven_controller-cache.lib  oven_controller.cmp  oven_controller.kicad_pcb  oven_controller.net  oven_controller.sch
board/: oven_controller-cache.lib  oven_controller.cmp  oven_controller.kicad_pcb  oven_controller.net  oven_controller.pro  oven_controller.sch
mcu/: CMakeLists.txt  main_mcu.cpp  thermo_max6675.cpp  thermo_max6675.hh
